[package]
name = "dust_dds"
version = "0.15.0"
description = "Data Distribution Service (DDS) implementation"
readme = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dust_dds_derive = { version = "0.15", path = "../dds_derive" }

md5 = { version = "0.7.0", default-features = false, optional = true } # Chose this crate over other possibilities since it doesn't have any other dependencies

socket2 = { version = "0.5", features = ["all"], optional = true }
network-interface = { version = "2.0.3", optional = true }

tracing = { version = "0.1", default-features = false, features = [
	"attributes",
], optional = true }

# Phase 101.2 — `regex` dropped in favour of a hand-rolled fnmatch
# matcher (`fnmatch_match` in `dcps/domain_participant.rs`). The
# regex crate transitively depends on `regex-syntax` +
# `regex-automata` + `aho-corasick`, all of which use
# `alloc::sync::Arc` directly — gated behind
# `#[cfg(target_has_atomic = "ptr")]` and unavailable on
# CAS-poor RISC-V `imc` targets (ESP32-C3). Removing the dep
# unblocks Phase 97.4.esp32-qemu and shrinks the build by
# ~3 kLOC of transitive code.

critical-section = { version = "1.2.0", default-features = false }

# Phase 101.3 — `Arc` / `Weak` substitution for CAS-poor targets
# (e.g. ESP32-C3 / `riscv32imc`). When the `portable-atomic` feature
# is on, route through `portable-atomic-util` so stdlib's
# `target_has_atomic = "ptr"` gating doesn't bite. Off by default —
# the std/POSIX path stays on stdlib types with zero overhead.
portable-atomic-util = { version = "0.2", default-features = false, features = ["alloc"], optional = true }
portable-atomic = { version = "1", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
criterion = { version = "0.3", features = ["html_reports"] }
tracing-subscriber = "0.3.20"
critical-section = { version = "1.2.0", default-features = false, features = [
	"std",
] }

opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32.0"

[features]
default = ["dcps", "rtps", "rtps_udp_transport", "std", "tracing"]
dcps = ["xtypes", "transport", "dep:md5"]
rtps_udp_transport = ["rtps", "dep:socket2", "dep:network-interface"]
rtps = ["rtps_messages"]
rtps_messages = ["transport"]
transport = ["xtypes"]
xtypes = []
std = ["critical-section/std"]
# Phase 97.3.esp32-qemu — `tracing` was previously a hard `dcps`
# dep; on `riscv32imc` (ESP32-C3) `tracing-core` calls
# `core::sync::atomic::*::compare_exchange/swap` directly, which the
# RISC-V `imc` target lacks the `A` extension to emit. Detach
# `tracing` so atomic-CAS-poor targets can drop it.
tracing = ["dep:tracing"]
# Phase 101.3 — substitute `alloc::sync::{Arc, Weak}` for
# `portable_atomic_util::{Arc, Weak}`. ABI-internal substitution
# (audit confirmed zero FFI crossings — see Phase 101 doc 101.1).
# Required on RISC-V `imc` / other targets where
# `target_has_atomic = "ptr"` evaluates false at compile time.
portable-atomic = ["dep:portable-atomic-util", "dep:portable-atomic"]

[[bench]]
name = "benchmark"
harness = false
